[package]
name = "rust-lightning-example"
version = "0.1.0"
authors = ["bmancini55 <bmancini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
bitcoin = "0.26"
rand = "0.7.3"
lightning = { version = "0.0.12", path = "../rust-lightning/lightning" }
lightning-net-tokio = { version = "0.0.5", path = "../rust-lightning/lightning-net-tokio" }
tokio = { version = "1.0", features = [ "io-util", "macros", "rt", "sync", "net", "time" ] }

[dev-dependencies]
tokio = { version = "1.0", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
